add setting for highlight code

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
 </script>
 <script>
     var slideshow = remark.create({
-        sourceUrl: 'markdown.md'
+        sourceUrl: 'markdown.md',
+        highlightLanguage: 'javascript',
+        highlightStyle: 'monokai'
     });
 </script>
 </body>
