--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,18 @@
     <title>Presentation</title>
     <meta charset="utf-8">
     <style>
+        @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
         @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-        @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
         @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-        body { font-family: 'Droid Serif'; }
+        body {
+            font-family: 'Noto Sans Japanese', serif;
+        }
         h1, h2, h3 {
-            font-family: 'Yanone Kaffeesatz';
-            font-weight: normal;
+            font-weight: bold;
+        }
+        .remark-slide-content {
+            background-color: #203040;
+            color: #FEF6EE
         }
         .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
         .remark-code-line-highlighted     { background-color: #373832; }
