--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,76 @@
         h1, h2, h3 {
             font-weight: bold;
         }
+        h2 {
+            font-size: 35px !important;
+        }
+        li {
+            font-size: 30px;
+        }
+        a {
+            color: #79B5F2;
+            text-decoration: none;
+        }
+        .col-7 {
+            width: 84%;
+            float: left;
+            margin-right: 2%;
+        }
+        .col-6 {
+            width: 72%;
+            float: left;
+            margin-right: 2%;
+        }
+        .col-5 {
+            width: 60%;
+            float: left;
+            margin-right: 2%;
+        }
+        .col-4 {
+            width: 48%;
+            float: left;
+            margin-right: 2%;
+        }
+        .col-3 {
+            width: 36%;
+            float: left;
+            margin-right: 2%;
+        }
+        .col-2 {
+            width: 24%;
+            float: left;
+            margin-right: 2%;
+        }
+        .col-1 {
+            width: 12%;
+            float: left;
+            margin-right: 2%;
+        }
+        .fs-l {
+            font-size: 55px;
+        }
+        .fs-m {
+            font-size: 40px;
+        }
+        .fs-s {
+            font-size: 20px;
+        }
+        .fw-b {
+            font-weight: bold;
+        }
+        .fc-yellow {
+            color: #ffeb3b;
+        }
+
         .remark-slide-content {
             background-color: #203040;
             color: #FEF6EE
         }
         .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
         .remark-code-line-highlighted     { background-color: #373832; }
+        .remark-code-line {
+            word-wrap: break-word;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +92,8 @@
     var slideshow = remark.create({
         sourceUrl: 'markdown.md',
         highlightLanguage: 'javascript',
-        highlightStyle: 'monokai'
+        highlightStyle: 'monokai',
+        highlightLines: true
     });
 </script>
 </body>
