update some style

--- a/src/index.html
+++ b/src/index.html
@@ -78,10 +78,25 @@
             background-color: #203040;
             color: #FEF6EE
         }
-        .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
-        .remark-code-line-highlighted     { background-color: #373832; }
+        .remark-code, .remark-inline-code {
+            font-family: 'Ubuntu Mono';
+        }
         .remark-code-line {
             word-wrap: break-word;
+        }
+        .hljs-number {
+            color: #ae81ff;
+        }
+        table {
+            margin: 0 auto;
+        }
+        th {
+            background: white;
+            color: #203040;
+        }
+        th, td {
+            border: 1px solid white;
+            padding: 10px;
         }
     </style>
 </head>
