add background sample

--- a/src/index.html
+++ b/src/index.html
@@ -70,12 +70,24 @@
         .fw-b {
             font-weight: bold;
         }
+
+
         .fc-yellow {
             color: #ffeb3b;
         }
 
+        .fc-black {
+            color: #000000;
+        }
+
+        .fc-red {
+            color: red;
+        }
+
         .remark-slide-content {
             background-color: #203040;
+            background-size: cover !important;
+            background-position: center !important;
             color: #FEF6EE
         }
         .remark-code, .remark-inline-code {
