--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>Presentation</title>
     <meta charset="utf-8">
     <style>
-        @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+        @import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
         @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
         @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
         body {
