update meta for social media

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Presentation</title>
+    <title>Neo-Async｜東京Node学園 18時限目</title>
     <meta charset="utf-8">
+    <meta name="title" content="Neo-Async">
+    <meta name="description" content="東京Node学園 18時限目で発表した Neo-Async の話です">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Neo-Async">
+    <meta property="og:description" content="東京Node学園 18時限目で発表した Neo-Async の話です">
+    <!-- TODO:公開URLの絶対パスを指定 -->
+    <meta property="og:image" content="img/og.png">
     <style>
         @import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
         @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
