update for twitter share

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,20 @@
     <meta charset="utf-8">
     <meta name="title" content="Neo-Async">
     <meta name="description" content="東京Node学園 18時限目で発表した Neo-Async の話です">
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Neo-Async">
     <meta property="og:description" content="東京Node学園 18時限目で発表した Neo-Async の話です">
-    <!-- TODO:公開URLの絶対パスを指定 -->
+
+    <!-- TODO:公開URLの絶対パスで指定 -->
+    <meta property="og:url" content="公開URL" />
     <meta property="og:image" content="img/og.png">
+    <meta name="twitter:image:src" content="img/og.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@hollow_nage">
+    <meta name="twitter:creator" content="@hollow_nage">
+    <meta name="twitter:title" content="Neo-Async #tng18">
+    <meta name="twitter:description" content="東京Node学園 18時限目で発表した Neo-Async の話です">
     <style>
         @import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
         @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
