move neo-async slide

--- a/20151008_neo-async/index.html
+++ b/20151008_neo-async/index.html
@@ -10,9 +10,9 @@
     <meta property="og:description" content="東京Node学園 18時限目で発表した Neo-Async の話です">
 
     <!-- TODO:公開URLの絶対パスで指定 -->
-    <meta property="og:url" content="公開URL" />
-    <meta property="og:image" content="img/og.png">
-    <meta name="twitter:image:src" content="img/og.png">
+    <meta property="og:url" content="http://suguru03.github.io/slide/20151008_neo-async" />
+    <meta property="og:image" content="http://suguru03.github.io/slide/20151008_neo-async/img/og.png">
+    <meta name="twitter:image:src" content="http://suguru03.github.io/slide/20151008_neo-async/img/og.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@hollow_nage">
